// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radio > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        aria-disabled="false"
        class="styles__17da2jl2"
        data-checked="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__17da2jl6"
          id="_r_0_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__17da2jl7"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__17da2jl9"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__17da2jl8"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
          for="_r_0_"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        aria-disabled="false"
        class="styles__17da2jl2"
        data-checked="true"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          checked=""
          class="styles__17da2jl6"
          id="_r_c_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__17da2jl7"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__17da2jl9"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__17da2jl8"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
          for="_r_c_"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        aria-disabled="true"
        class="styles__17da2jl2"
        data-checked="false"
      >
        <input
          aria-disabled="true"
          aria-invalid="false"
          class="styles__17da2jl6"
          disabled=""
          id="_r_3_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__17da2jl7"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__17da2jl9"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__17da2jl8"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
          for="_r_3_"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        aria-disabled="false"
        class="styles__17da2jl2"
        data-checked="false"
        data-error="Invalid value"
      >
        <input
          aria-disabled="false"
          aria-invalid="true"
          class="styles__17da2jl6"
          id="_r_f_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__17da2jl7"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__17da2jl9"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__17da2jl8"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
          for="_r_f_"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        aria-disabled="false"
        class="styles__17da2jl2"
        data-checked="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="styles__17da2jl6"
          id="_r_i_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__17da2jl7"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__17da2jl9"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__17da2jl8"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
          for="_r_i_"
        >
          Choice
        </label>
      </div>
      <span
        class="styles__17da2jl1 style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
      >
        Helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly with tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="_r_7_"
      aria-describedby="_r_7_"
      class="styles__w40vpo9"
      tabindex="0"
    >
      <div
        class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <div
          aria-disabled="false"
          class="styles__17da2jl2"
          data-checked="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="styles__17da2jl6"
            id="_r_6_"
            name="radio"
            type="radio"
            value="choice"
          />
          <svg
            class="styles__17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="styles__17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="styles__17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            for="_r_6_"
          >
            Choice
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders without name 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        aria-disabled="true"
        class="styles__17da2jl2"
        data-checked="false"
      >
        <input
          aria-disabled="true"
          aria-invalid="false"
          class="styles__17da2jl6"
          disabled=""
          id="_r_9_"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__17da2jl7"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__17da2jl9"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__17da2jl8"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
          for="_r_9_"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
